web/base.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");

:root {
  /* All root variables */
  font-family: "Roboto", sans-serif;

  --colour-text: #000;
  --colour-block: #eee;
  --colour-accent: #ffb53c;
  --colour-accent-trans: #fff9bf62;
  --colour-accent-soft: #ffe5bb;
  --colour-accent-text: #a46600;
  --colour-highlight: #fff;

  --colour-light-grey: #c7c7c7;
  --colour-mid-grey: #a6acbe;

  --colour-red: #e32020bf;
  --colour-amber: #ff9d30db;
  --colour-green: #43d34a91;

  /* Colour used for profile page*/
  --colour-darker-grey: #808080;

  /* Colours initially used in the login page*/
  --colour-box-background: #ffffff;
  --colour-box-shadow: rgba(0, 0, 0, 0.25);

  --card-shadow: 0 4px 4px rgb(0, 0, 0, 0.25);
  --card-radius: 40px;
  --card-small-radius: 14px;

  --dimmed-opacity: 0.65;

  --nav-animation: 0.3s ease-in-out;
}

@media only screen and (prefers-color-scheme: dark) {
  :root {
    /* Dark Mode Overrides*/
    --colour-text: #dde;
    --colour-block: #080808;
    --colour-accent-trans: #f8d9a82a;
    --colour-accent-soft: #422900;
    --colour-highlight: #1d1d1d;
    --colour-mid-grey: #a6acbe;
  }
}

body {
  color: var(--colour-text);
  background-color: var(--colour-block);
  margin: 0;
}

header.header {
  background-color: var(--colour-highlight);
  display: flex;
  justify-content: space-between;
}

.header h1 {
  margin: 0.5rem;
}

/* DESKTOP NAV */

/* Header bar */
.header {
  padding-block: 0.5rem;
}

.account-info {
  display: none !important;
}

@media (min-width: 768px) {
  .account-info {
    display: flex !important;
    gap: 1rem;
    margin-inline: 4rem;
  }
  .account-info h6 {
    font-size: 1.2em;
  }
  .account-info * {
    margin: 0;
  }
  .account-info .flex-col {
    align-items: flex-end;
  }

  .account-info img {
    aspect-ratio: 1;
    border-radius: 100vh;
  }
}

/* SIDE MENU */
body > main {
  margin: 0;
  padding: 0.2rem 0.5rem;
}

.side-menu {
  position: fixed;
  inset: 0;
  background-color: var(--colour-accent);
  z-index: 1;
  scale: 0% 100%;
  transition: scale var(--nav-animation);
  transform-origin: left;
}

.side-menu[data-open] {
  scale: 100% 100%;
}

.side-menu img {
  max-width: 4rem;
  margin: auto;
  display: block;
  left: 3;
}

.side-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.side-menu li {
  position: relative;
  width: 100%;
  margin: auto;
  text-align: center;
}

.side-menu li a {
  color: var(--colour-text);
  text-decoration: none;
  display: flex;
  justify-content: left;
  align-items: center;
  padding: 1rem;
  font-size: 1.2em;
}

@media (max-width: 768px) {
  .side-menu ul {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  /* line between links that aren't the last */
  .side-menu li:not(:last-child)::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    margin-inline: 1.5rem;
    margin-top: 0.5rem;
    height: 0.25rem;
    background-color: var(--colour-text);
    border-radius: 100vmax;
  }
}

.side-menu li[data-active] {
  background-color: var(--colour-highlight);
  border-radius: 0.4rem;
}

.side-menu li[data-active] a {
  color: var(--colour-accent);
}

.nav-description {
  margin-left: 0.5rem;
}

@media (min-width: 768px) {
  :root {
    --side-menu-width: 3rem;
  }

  .nav-description {
    display: none;
  }

  .side-menu {
    display: block;
    position: fixed;
    height: 100%;
    width: var(--side-menu-width);
    scale: 100% 100%;
  }

  .side-menu li {
    width: 2.5rem;
    aspect-ratio: 1;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .side-menu li a {
    padding: 0;
  }

  header {
    margin-left: var(--side-menu-width);
  }
  body > main {
    margin-left: var(--side-menu-width);
    padding: 0.5rem 4rem;
  }
}

/* MOBILE NAV */

.mobile-nav-toggle {
  position: fixed;
  top: 0.8rem;
  right: 0.5rem;
  background: var(--colour-highlight);
  box-shadow: var(--card-shadow);
  border-radius: 100vmax;
  display: inline-block;
  color: var(--colour-accent);
  border: none;
  font-size: 2rem;
  z-index: 3;
  transition: color var(--nav-animation);
}

.mobile-nav-toggle[data-open] {
  color: var(--colour-text);
}

@media (min-width: 768px) {
  .mobile-nav-toggle {
    display: none;
  }
}

/* CARDS */

.title-card {
  font-size: 24px;
  padding: 1rem;
  margin: 0;
}

/* utility classes that (should) be able to be re used in a lot of pages) */
.card {
  background-color: var(--colour-highlight);
  color: var(--colour-text);
  box-shadow: var(--card-shadow);
  border-radius: var(--card-radius);
  padding: 1.2rem;
  margin: 1.5rem 0;
}

.card a {
  color: var(--colour-text);
  font-weight: 600;
  text-decoration: underline var(--colour-accent);
}

.card-title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card-description {
  font-size: 1.1em;
  line-height: 1.25em;
}

.small-cards-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(40ch, 1fr));
  justify-items: center;
}

/* smaller 'sub-cards' */
.card-small {
  width: 100%;
  max-width: 30ch;
  margin: 0.5rem;
  background-color: var(--colour-highlight);
  padding: 1rem;
  border-radius: var(--card-small-radius);
  box-shadow: var(--card-shadow);
}

.accent-outline {
  border: 0.3rem solid var(--colour-accent);
}

.title-card-small {
  margin: 0;
}

/* KANBAN */
@media (min-width: 950px) {
  .kanban-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  .kanban-mobile-options {
    display: none;
  }
}

.kanban-section {
  flex-grow: 100;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.kanban-section .card-small {
  width: 80%;
  max-width: unset;
}

.kanban-section .card-small:hover {
  cursor: pointer;
}
/* ... */

